@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2011-12-28 (SVN):
+    * cvar.c (Cvar_Set): Simplified.
+    * quakedef.h: updated beta date stamp to 2011-12-28.
+
 2011-12-27 (SVN):
     * sv_main.c: Removed mistakenly added notify callback for sv_stopspeed.
 
